adicionado chave admin para admin users
